# quiz_gen

./: .Rhistory  .gitignore  AnnotationsEvalNoExp_1.csv  AnnotationsEvalNoExp_2.csv  AnnotationsEvalNoExp_3.csv  AnnotationsEvalNoExp_4.csv  AnnotationsEvalNoExp_5.csv  AnnotationsEval_1.csv  AnnotationsEval_2.csv  AnnotationsEval_3.csv  AnnotationsEval_4.csv  AnnotationsEval_5.csv  AnnotationsProofConcept_ID.csv  Cargo.toml  Feedback.csv  FeedbackEvalResults_1.csv  FeedbackEvalResults_2.csv  FeedbackEvalResults_3.csv  FeedbackEvalResults_4.csv  FeedbackEvalResults_5.csv  README.md  \  coherence.py  evaluations.csv  evaluations_4v4_deterministic.csv  gpt_evaluation  grayson_manual_eval.csv  hector_manual_eval.csv  quiz_questions.db  quiz_questions.db.old  rubric.json  run_whisper.sh
EvalAI/: Cargo.toml
EvalAI/src/: bard.rs  common_words.rs  stat.rs
PyTextbookProcessor/: Generator.py  Pipfile  prepare.py  preprocessor.py  sections_chapters.db  train.py  your_data_corpus.pkl  your_data_corpus_tfidf.pkl  your_data_dictionary.pkl
RustyGen/: Cargo.toml  keywords.txt  parsed_quiz.txt  quiz_questions.db
RustyGen/input/section_I/: chapter_1.md
RustyGen/input/section_III/: chapter_5.md
RustyGen/input/section_IV/: chapter_10.md  chapter_8.md  chapter_9.md
RustyGen/input/section_V/: chapter_12.md  chapter_13.md  chapter_14.md
RustyGen/input/section_VI/: chapter_15.md  chapter_16.md  chapter_17.md  chapter_19.md
RustyGen/output/: quiz_chapter_2.txt  quiz_chapter_4.txt  quiz_chapter_5.txt
RustyGen/parsed_quizzes/: quiz_chapter_1.md.txt
RustyGen/src/: explanation_gen.rs  main.rs  main.rs.old  quiz_gen.rs  quiz_parser.rs  similarity.rs
(+1082 files in other folders)
