[package]
name = "quiz_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

indoc = "2.0.1"
itertools = "0.10.5"
openai_api_rust = "0.1.8"
regex = "1.8.1"
requestty = "0.5.0"
rustyline = "11.0.0"
serde_json = "1.0.96"
textwrap = "0.16.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
rust-bert = "0.20.0"
hound = "3.5.0"
whisper-rs = "0.8.0"
pyo3 = "0.19.0"
num_cpus = "1.16.0"
walkdir = "2.3.3"
log = "0.4.19"
env_logger = "0.10.0"
rand = "0.8.5"
csv = "1.2.2"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
