[package]
name = "EvalAI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
rusqlite = "0.29.0"
tokio = { version = "1.28.2", features = ["full"] }
openai_api_rust = "0.1.8"
rust-bert = "0.20.0"
